lexer/pseudocodeParser.js
// Generated from pseudocode.g4 by ANTLR 4.13.0
// jshint ignore: start
import antlr4 from 'antlr4';
import pseudocodeListener from './pseudocodeListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class pseudocodeParser extends antlr4.Parser {

    static grammarFileName = "pseudocode.g4";
    static literalNames = [ null, "'AND'", "'OR'", "'NOT'", "'='", "'.'", 
                            "','", "';'", "'('", "')'", "'{'", "'}'", "'['", 
                            "']'", "':'", "'-'", "'+'", "'*'", "'/'", "'^'", 
                            "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
                            null, null, "'for'", "'to'", "'next'", "'MOD'", 
                            "'DIV'", "'while'", "'endwhile'", "'if'", "'then'", 
                            "'elseif'", "'else'", "'endif'", "'do'", "'until'", 
                            "'switch'", "'case'", "'default'", "'endswitch'" ];
    static symbolicNames = [ null, "AND", "OR", "NOT", "EQ", "DOT", "COMMA", 
                             "SEMI", "LPAREN", "RPAREN", "LCURLY", "RCURLY", 
                             "LSQ", "RSQ", "COLON", "NEG", "PLUS", "MUL", 
                             "DIV", "POW", "LT", "GT", "LTE", "GTE", "EE", 
                             "NE", "FUNCKW", "ENDFUNCKW", "FOR", "TO", "NEXT", 
                             "MODKW", "DIVKW", "WHILE", "ENDWHILE", "IF", 
                             "THEN", "ELSEIF", "ELSE", "ENDIF", "DO", "UNTIL", 
                             "SWITCH", "CASE", "DEFAULT", "ENDSWITCH", "INT", 
                             "STRING", "ID", "NEWLINE", "WS" ];
    static ruleNames = [ "program", "stat", "def", "closure", "func_dec", 
                         "for_start", "for", "while_start", "while", "do_end", 
                         "do_while", "if_start", "if_continuation", "if_final", 
                         "if", "switch_start", "switch_mid", "switch_default", 
                         "switch_case", "expr", "literal", "func_call", 
                         "calc", "mul", "mod", "pow", "bracket", "comparison", 
                         "true_id", "index" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = pseudocodeParser.ruleNames;
        this.literalNames = pseudocodeParser.literalNames;
        this.symbolicNames = pseudocodeParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 19:
    	    		return this.expr_sempred(localctx, predIndex);
    	case 27:
    	    		return this.comparison_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 4);
    		case 1:
    			return this.precpred(this._ctx, 3);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    comparison_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, pseudocodeParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 72;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 335577352) !== 0) || ((((_la - 33)) & ~0x1f) === 0 && ((1 << (_la - 33)) & 57989) !== 0)) {
	            this.state = 70;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 60;
	                this.stat();
	                break;

	            case 2:
	                this.state = 61;
	                this.func_dec();
	                break;

	            case 3:
	                this.state = 62;
	                this.func_call();
	                break;

	            case 4:
	                this.state = 63;
	                this.expr(0);
	                break;

	            case 5:
	                this.state = 64;
	                this.for_();
	                break;

	            case 6:
	                this.state = 65;
	                this.while_();
	                break;

	            case 7:
	                this.state = 66;
	                this.if_();
	                break;

	            case 8:
	                this.state = 67;
	                this.do_while();
	                break;

	            case 9:
	                this.state = 68;
	                this.switch_case();
	                break;

	            case 10:
	                this.state = 69;
	                this.true_id();
	                break;

	            }
	            this.state = 74;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 75;
	        this.match(pseudocodeParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stat() {
	    let localctx = new StatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, pseudocodeParser.RULE_stat);
	    try {
	        this.state = 85;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 77;
	            this.true_id();
	            this.state = 78;
	            this.match(pseudocodeParser.EQ);
	            this.state = 79;
	            this.expr(0);
	            this.state = 80;
	            this.match(pseudocodeParser.NEWLINE);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 82;
	            this.expr(0);
	            this.state = 83;
	            this.match(pseudocodeParser.NEWLINE);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	def() {
	    let localctx = new DefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, pseudocodeParser.RULE_def);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 87;
	        this.match(pseudocodeParser.ID);
	        this.state = 88;
	        this.match(pseudocodeParser.LPAREN);
	        this.state = 99;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===48) {
	            this.state = 89;
	            this.match(pseudocodeParser.ID);
	            this.state = 94;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===6) {
	                this.state = 90;
	                this.match(pseudocodeParser.COMMA);
	                this.state = 91;
	                this.match(pseudocodeParser.ID);
	                this.state = 96;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 101;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 102;
	        this.match(pseudocodeParser.RPAREN);
	        this.state = 103;
	        this.match(pseudocodeParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	closure() {
	    let localctx = new ClosureContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, pseudocodeParser.RULE_closure);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 113;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 268468488) !== 0) || ((((_la - 33)) & ~0x1f) === 0 && ((1 << (_la - 33)) & 57989) !== 0)) {
	            this.state = 111;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 3:
	            case 8:
	            case 15:
	            case 46:
	            case 47:
	            case 48:
	                this.state = 105;
	                this.stat();
	                break;
	            case 28:
	                this.state = 106;
	                this.for_();
	                break;
	            case 33:
	                this.state = 107;
	                this.while_();
	                break;
	            case 35:
	                this.state = 108;
	                this.if_();
	                break;
	            case 40:
	                this.state = 109;
	                this.do_while();
	                break;
	            case 42:
	                this.state = 110;
	                this.switch_case();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 115;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	func_dec() {
	    let localctx = new Func_decContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, pseudocodeParser.RULE_func_dec);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 116;
	        this.match(pseudocodeParser.FUNCKW);
	        this.state = 117;
	        this.def();
	        this.state = 118;
	        this.closure();
	        this.state = 119;
	        this.match(pseudocodeParser.ENDFUNCKW);
	        this.state = 120;
	        this.match(pseudocodeParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	for_start() {
	    let localctx = new For_startContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, pseudocodeParser.RULE_for_start);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.match(pseudocodeParser.FOR);
	        this.state = 123;
	        this.true_id();
	        this.state = 124;
	        this.match(pseudocodeParser.EQ);
	        this.state = 125;
	        this.expr(0);
	        this.state = 126;
	        this.match(pseudocodeParser.TO);
	        this.state = 127;
	        this.expr(0);
	        this.state = 128;
	        this.match(pseudocodeParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	for_() {
	    let localctx = new ForContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, pseudocodeParser.RULE_for);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 130;
	        this.for_start();
	        this.state = 131;
	        this.closure();
	        this.state = 132;
	        this.match(pseudocodeParser.NEXT);
	        this.state = 133;
	        this.true_id();
	        this.state = 134;
	        this.match(pseudocodeParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	while_start() {
	    let localctx = new While_startContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, pseudocodeParser.RULE_while_start);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 136;
	        this.match(pseudocodeParser.WHILE);
	        this.state = 137;
	        this.expr(0);
	        this.state = 138;
	        this.match(pseudocodeParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	while_() {
	    let localctx = new WhileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, pseudocodeParser.RULE_while);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 140;
	        this.while_start();
	        this.state = 141;
	        this.closure();
	        this.state = 142;
	        this.match(pseudocodeParser.ENDWHILE);
	        this.state = 143;
	        this.match(pseudocodeParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	do_end() {
	    let localctx = new Do_endContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, pseudocodeParser.RULE_do_end);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 145;
	        this.match(pseudocodeParser.UNTIL);
	        this.state = 146;
	        this.expr(0);
	        this.state = 147;
	        this.match(pseudocodeParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	do_while() {
	    let localctx = new Do_whileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, pseudocodeParser.RULE_do_while);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149;
	        this.match(pseudocodeParser.DO);
	        this.state = 150;
	        this.match(pseudocodeParser.NEWLINE);
	        this.state = 151;
	        this.closure();
	        this.state = 152;
	        this.do_end();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	if_start() {
	    let localctx = new If_startContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, pseudocodeParser.RULE_if_start);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 154;
	        this.match(pseudocodeParser.IF);
	        this.state = 155;
	        this.expr(0);
	        this.state = 156;
	        this.match(pseudocodeParser.THEN);
	        this.state = 157;
	        this.match(pseudocodeParser.NEWLINE);
	        this.state = 158;
	        this.closure();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	if_continuation() {
	    let localctx = new If_continuationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, pseudocodeParser.RULE_if_continuation);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 160;
	        this.match(pseudocodeParser.ELSEIF);
	        this.state = 161;
	        this.expr(0);
	        this.state = 162;
	        this.match(pseudocodeParser.THEN);
	        this.state = 163;
	        this.match(pseudocodeParser.NEWLINE);
	        this.state = 164;
	        this.closure();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	if_final() {
	    let localctx = new If_finalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, pseudocodeParser.RULE_if_final);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 166;
	        this.match(pseudocodeParser.ELSE);
	        this.state = 167;
	        this.match(pseudocodeParser.NEWLINE);
	        this.state = 168;
	        this.closure();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	if_() {
	    let localctx = new IfContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, pseudocodeParser.RULE_if);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 170;
	        this.if_start();
	        this.state = 174;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===37) {
	            this.state = 171;
	            this.if_continuation();
	            this.state = 176;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 178;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===38) {
	            this.state = 177;
	            this.if_final();
	        }

	        this.state = 180;
	        this.match(pseudocodeParser.ENDIF);
	        this.state = 181;
	        this.match(pseudocodeParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	switch_start() {
	    let localctx = new Switch_startContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, pseudocodeParser.RULE_switch_start);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 183;
	        this.match(pseudocodeParser.SWITCH);
	        this.state = 184;
	        this.true_id();
	        this.state = 185;
	        this.match(pseudocodeParser.COLON);
	        this.state = 186;
	        this.match(pseudocodeParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	switch_mid() {
	    let localctx = new Switch_midContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, pseudocodeParser.RULE_switch_mid);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 188;
	        this.match(pseudocodeParser.CASE);
	        this.state = 189;
	        this.literal();
	        this.state = 190;
	        this.match(pseudocodeParser.COLON);
	        this.state = 191;
	        this.match(pseudocodeParser.NEWLINE);
	        this.state = 192;
	        this.closure();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	switch_default() {
	    let localctx = new Switch_defaultContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, pseudocodeParser.RULE_switch_default);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 194;
	        this.match(pseudocodeParser.DEFAULT);
	        this.state = 195;
	        this.match(pseudocodeParser.COLON);
	        this.state = 196;
	        this.match(pseudocodeParser.NEWLINE);
	        this.state = 197;
	        this.closure();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	switch_case() {
	    let localctx = new Switch_caseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, pseudocodeParser.RULE_switch_case);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 199;
	        this.switch_start();
	        this.state = 203;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===43) {
	            this.state = 200;
	            this.switch_mid();
	            this.state = 205;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 207;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===44) {
	            this.state = 206;
	            this.switch_default();
	        }

	        this.state = 209;
	        this.match(pseudocodeParser.ENDSWITCH);
	        this.state = 210;
	        this.match(pseudocodeParser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 38;
	    this.enterRecursionRule(localctx, 38, pseudocodeParser.RULE_expr, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 221;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 213;
	            this.literal();
	            break;

	        case 2:
	            this.state = 214;
	            this.match(pseudocodeParser.ID);
	            break;

	        case 3:
	            this.state = 215;
	            this.calc();
	            break;

	        case 4:
	            this.state = 216;
	            this.func_call();
	            break;

	        case 5:
	            this.state = 217;
	            this.match(pseudocodeParser.NOT);
	            this.state = 218;
	            this.expr(5);
	            break;

	        case 6:
	            this.state = 219;
	            this.comparison(0);
	            break;

	        case 7:
	            this.state = 220;
	            this.true_id();
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 231;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 229;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, pseudocodeParser.RULE_expr);
	                    this.state = 223;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 224;
	                    this.match(pseudocodeParser.AND);
	                    this.state = 225;
	                    this.expr(5);
	                    break;

	                case 2:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, pseudocodeParser.RULE_expr);
	                    this.state = 226;
	                    if (!( this.precpred(this._ctx, 3))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                    }
	                    this.state = 227;
	                    this.match(pseudocodeParser.OR);
	                    this.state = 228;
	                    this.expr(4);
	                    break;

	                } 
	            }
	            this.state = 233;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	literal() {
	    let localctx = new LiteralContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, pseudocodeParser.RULE_literal);
	    try {
	        this.state = 237;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 48:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 234;
	            this.true_id();
	            break;
	        case 46:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 235;
	            this.match(pseudocodeParser.INT);
	            break;
	        case 47:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 236;
	            this.match(pseudocodeParser.STRING);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	func_call() {
	    let localctx = new Func_callContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, pseudocodeParser.RULE_func_call);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 239;
	        this.match(pseudocodeParser.ID);
	        this.state = 240;
	        this.match(pseudocodeParser.LPAREN);
	        this.state = 249;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 33032) !== 0) || ((((_la - 46)) & ~0x1f) === 0 && ((1 << (_la - 46)) & 7) !== 0)) {
	            this.state = 241;
	            this.expr(0);
	            this.state = 246;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===6) {
	                this.state = 242;
	                this.match(pseudocodeParser.COMMA);
	                this.state = 243;
	                this.expr(0);
	                this.state = 248;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 251;
	        this.match(pseudocodeParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	calc() {
	    let localctx = new CalcContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, pseudocodeParser.RULE_calc);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 253;
	        this.mul();
	        this.state = 258;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,17,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 254;
	                _la = this._input.LA(1);
	                if(!(_la===15 || _la===16)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	                this.state = 255;
	                this.mul(); 
	            }
	            this.state = 260;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,17,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


